src/LineChart.css
.linechart {
  margin-top: 1em;
  padding-top: 1em;
  margin-bottom: 2em;
}

.linechart_path {
  stroke-width: 3;
  fill: none;
}

.linechart_axis {
  stroke: #bdc3c7;
}

.linechart_point {
  fill: #fff;
  stroke-width: 2;
}

.linechart_area {
  fill: #64B5F6;
  stroke: none;
  opacity: .4;
}

.linechart_label {
 fill: #64B5F6;
 font-weight: 700;
}

.hoverLine {
  stroke: #7D95B6;
  stroke-width: 1;
}

.linechart_label_prediction {
  fill: red;
}

